// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`kirbyup build > builds Kirby Panel plugins 1`] = `
"window.panel.plugin("kirbyup/test", { fields: { demo: { extends: "k-info-field" } } });
"
`;

exports[`kirbyup build > builds index.css 1`] = `""`;

exports[`kirbyup build > builds index.css 2`] = `
".foo{content:"bar"}
/*$vite$:1*/"
`;

exports[`kirbyup build > builds index.js 1`] = `
"var e = "bar";
export { e as default };
"
`;

exports[`kirbyup build > compiles Vue single-file components 1`] = `
"import { createElementBlock as e, createElementVNode as t, openBlock as n } from "vue";
var r = (e, t) => {
	let n = e.__vccOpts || e;
	for (let [e, r] of t) n[e] = r;
	return n;
}, i = { created() {
	console.log("created");
} }, a = { class: "k-demo-section" };
function o(r, i, o, s, c, l) {
	return n(), e("section", a, [...i[0] ||= [t("header", { class: "k-section-header" }, [t("h2", { class: "k-headline" }, "Custom section")], -1)]]);
}
var s = /* @__PURE__ */ r(i, [["render", o]]);
window.panel.plugin("kirbyup/test", { sections: { demo: s } });
"
`;

exports[`kirbyup build > expands kirbyup.import() into a component map 1`] = `
"import { createBlock as e, createTextVNode as t, openBlock as n, resolveComponent as r, withCtx as i } from "vue";
var a = Object.defineProperty, o = (e, t) => {
	let n = {};
	for (var r in e) a(n, r, {
		get: e[r],
		enumerable: !0
	});
	return t || a(n, Symbol.toStringTag, { value: "Module" }), n;
}, s = (e, t) => {
	let n = e.__vccOpts || e;
	for (let [e, r] of t) n[e] = r;
	return n;
}, c = /* @__PURE__ */ o({ default: () => d }), l = {};
function u(a, o) {
	let s = r("k-header");
	return n(), e(s, null, {
		default: i(() => [...o[0] ||= [t("Bar", -1)]]),
		_: 1
	});
}
var d = /* @__PURE__ */ s(l, [["render", u]]), f = /* @__PURE__ */ o({ default: () => h }), p = {};
function m(a, o) {
	let s = r("k-header");
	return n(), e(s, null, {
		default: i(() => [...o[0] ||= [t("Foo", -1)]]),
		_: 1
	});
}
var h = /* @__PURE__ */ s(p, [["render", m]]), g = Object.freeze({ import(e) {
	return Object.entries(e).reduce((e, [t, n]) => (e[_(t)] = n.default, e), {});
} });
function _(e) {
	return e.substring(e.lastIndexOf("/") + 1, e.lastIndexOf(".")).toLowerCase();
}
window.panel.plugin("kirbyup/example", { blocks: g.import(/* @__PURE__ */ Object.assign({
	"./components/blocks/Bar.vue": c,
	"./components/blocks/Foo.vue": f
})) });
"
`;

exports[`kirbyup build > injects built-in environment variables 1`] = `
"var e = "production";
export { e as mode };
"
`;

exports[`kirbyup build > injects custom environment variables 1`] = `
"var e = "bar";
export { e as foo };
"
`;

exports[`kirbyup build > loads config file with function export 1`] = `
"var e = "bar";
export { e as default };
"
`;

exports[`kirbyup build > loads config file with object export 1`] = `
"var e = "bar";
export { e as default };
"
`;

exports[`kirbyup build > resolves path aliases 1`] = `
"var e = "bar";
export { e as default };
"
`;
